--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block header_left %}
-<!-- Empty block - no back button on menu page -->
+<!-- Empty - no back button on menu page -->
 {% endblock %}
 
 {% block content %}
